add lantiude in all

--- a/django_project/templates/Buildings/form12.html
+++ b/django_project/templates/Buildings/form12.html
@@ -6,10 +6,71 @@
     <title>    طلبات تراخيص المباني</title>
 	<link rel="stylesheet" type="text/css" href="css/form12.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/form12.css' %}">
+	<link rel="stylesheet" href="https://js.arcgis.com/4.19/esri/themes/light/main.css">
+    <script src="https://js.arcgis.com/4.19/"></script>
+	<style>
+        .location{
+            width: 100%;
+            position: relative;
+            display: flex;
+            flex-direction: row;
+			justify-content: space-between;
+            margin-bottom: 5px;
+        }
+		.location .loc{
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
+		.color .first{
+			display: flex;
+			align-items: center;
+			gap: 1rem;
+		}
+		.color .first span{
+			width: 30px;
+			height: 30px;
+			background-color: green;
+			border-radius: 50%;
+		}
+		.color .first:nth-child(2) span{
+			background-color: red;
+		}
+		.color .first:nth-child(3) span{
+			background-color: yellow;
+		}
+		.color .first:nth-child(4) span{
+			background-color: #4a4e69;
+		}
+        .location label{
+            margin-bottom: 10px;
+        }
+        .location #latt{
+            margin-bottom: 10px;
+            color: #1a1a1f;
+            display: block;
+            text-align: left;
+            
+        }
+        .location .lat, .long{
+            display: block;
+            margin-bottom: 10px;
+            background-color: white;
+            padding: 10px;
+            border: 1px solid black;
+            width: 200px;
+        }
+        #mapContainer {
+            height: 400px; /* Adjust the height as needed */
+            position: relative;
+            z-index: 1;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
 	<body>
-		<div class="container">
+		<div class="container" dir="rtl">
 			<h1>تحصيل طلبات الترخيص للمبني</h1>
 			<form action="" method="post">
 				{% csrf_token %}
@@ -55,11 +116,45 @@
 
 		  
 		  <div>
+			<div class="location" dir="rtl">
+				<div class="loc">
+					<div>
+						<label for="id_latitude">Latitude:</label>
+						<input type="hidden" id="id_latitude" name="latitude">
+						<span class="lat">null</span>
+					</div>
+					<div>
+						<label for="id_longitude">Longitude:</label>
+						<input type="hidden" id="id_longitude" name="longitude">
+						<span class="long">null</span>
+					</div>
+				</div>
+				<div class="color">
+					<div class="first">
+						<span></span>
+						<p>Approval</p>
+					</div>
+					<div class="first">
+						<span></span>
+						<p>Refuse</p>
+					</div>
+					<div class="first">
+						<span></span>
+						<p>In Searching</p>
+					</div>
+					<div class="first">
+						<span></span>
+						<p>Urban Space</p>
+					</div>
+				</div>
+			</div>
+				
+				<div id="mapContainer"></div>
 			<button type="submit">تقديم الطلب</button>
 		  </div>
 		</form>
 
 		</div>
-		
+		<script src="{%static 'js/mapbuild.js'%}"></script>
 	  </body>
 	  </html>
