--- a/django_project/templates/Dashboard/dashelec1.html
+++ b/django_project/templates/Dashboard/dashelec1.html
@@ -57,7 +57,7 @@
                     <td>{{ meter_request.address }}</td>
                     <td>{{ meter_request.phone_num }}</td>
                     <td>{{ meter_request.block_num }}</td>
-                    <td>
+                    <td class="images">
                         <!-- Display the images here -->
                         <img src="{{ meter_request.att_image.url }}" alt="Attachment Image">
                         <img src="{{ meter_request.id_image.url }}" alt="ID Image">
