--- a/django_project/templates/ElectricityBills/form2.html
+++ b/django_project/templates/ElectricityBills/form2.html
@@ -7,8 +7,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{%static 'css/form2.css'%}">
+    <link rel="stylesheet" href="https://js.arcgis.com/4.19/esri/themes/light/main.css">
+    <script src="https://js.arcgis.com/4.19/"></script>
 
     <title>Document</title>
+    <style>
+        .location{
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            padding: 10px;
+            box-sizing: border-box;
+            margin-bottom: 5px;
+        }
+        .location label{
+            margin-bottom: 10px;
+        }
+        .location #latt{
+            margin-bottom: 10px;
+            color: #1a1a1f;
+            display: block;
+            text-align: left;
+            
+        }
+        .location .lat, .long{
+            display: block;
+            margin-bottom: 10px;
+            background-color: white;
+            padding: 10px;
+            border: 1px solid black;
+            width: 200px;
+        }
+        #mapContainer {
+            height: 400px; /* Adjust the height as needed */
+            position: relative;
+            z-index: 1;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body> 
     
@@ -165,10 +205,22 @@
             <input type = "text" name = "tax_num" id = "address" placeholder = " رقم الضريبه "><br/><br/>     
         </div>
     </div>
+    <div class="location" dir="rtl">
+        <div>
+            <label for="id_latitude">Latitude:</label>
+            <input type="hidden" id="id_latitude" name="latitude">
+            <span class="lat">null</span>
+        </div>
+        <div>
+            <label for="id_longitude">Longitude:</label>
+            <input type="hidden" id="id_longitude" name="longitude">
+            <span class="long">null</span>
+        </div>
+        </div>
+        
+        <div id="mapContainer"></div>
     <button class="btn">تسجيل</button>
     </form>
     </div>
-    <link rel="stylesheet" href="script.js">
-    <link rel="stylesheet" href="script2.js">
-    <script src="{%static 'main.js'%}"></script>
+    <script src="{%static 'js/mapelec.js'%}"></script>
 </body>
