--- a/django_project/templates/Dashboard/dashbuild1.html
+++ b/django_project/templates/Dashboard/dashbuild1.html
@@ -45,6 +45,10 @@
                     <th>Address</th>
                     <th>The number of the agricultural basin to which it belongs</th>
                     <th>Phone</th>
+                    <th>photo1</th>
+                    <th>photo2 </th>
+                    <th>photo3</th>
+                    <th>photo4</th>
                     <th>Latitude</th>
                     <th>Longitude</th>
                     <th>Approved</th>
@@ -59,7 +63,10 @@
                     <td>{{ building_application.space }}</td>
                     <td>{{ building_application.agricultural_basin_number }}</td>
                     <td>{{ building_application.phone_number }}</td>
-                   
+                    <td><img src="{{ building_application.national_identity_card_photo.url }}" alt="Attachment Image"></td>
+                    <td><img src="{{ building_application.documents_ownership.url }}" alt="Attachment Image"></td>
+                    <td><img src="{{ building_application.agricultural_approval.url }}" alt="Attachment Image"></td>
+                    <td><img src="{{ building_application.approval_photos.url }}" alt="Attachment Image"></td>
                     <td>{{ building_application.latitude }}</td>
                     <td>{{ building_application.longitude }}</td>
                     <td>
