--- a/django_project/templates/Dashboard/dashbuild2.html
+++ b/django_project/templates/Dashboard/dashbuild2.html
@@ -48,7 +48,13 @@
                     <th>Determine the area to be built on in detail</th>
                     <th>Latitude</th>
                     <th>Longitude</th>
+                    <th>Photo1</th>
+                    <th>Photo2</th>
+                    <th>Photo3</th>
+                    <th>Photo4</th>
                     <th>Approved</th>
+
+
                 </tr>
             </thead>
             <tbody>
@@ -63,6 +69,10 @@
                     <td>{{ building.space }}</td>
                     <td>{{ building.latitude }}</td>
                     <td>{{ building.longitude }}</td>
+                    <td><img src="{{ building.national_identity_card_photo.url }}" alt="Attachment Image"></td>
+                    <td><img src="{{ building.violation_request.url }}" alt="Attachment Image"></td>
+                    <td><img src="{{ building.violation_request_eng.url }}" alt="Attachment Image"></td>
+                    <td><img src="{{ building.approval_photos.url }}" alt="Attachment Image"></td>
                     <td>
                         <!-- Display Approved status with checkbox -->
                         <input type="checkbox" {% if building.approved %}checked{% endif %}>
