--- a/django_project/templates/WaterBills/form10.html
+++ b/django_project/templates/WaterBills/form10.html
@@ -1,58 +1,59 @@
-{%load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>ادخال قراءة عداد غاز طبيعي</title>
-	<link rel="stylesheet" type="text/css" href="css/form10.css">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/form10.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/form10.css' %}">
 </head>
 <body>
-
-	<div class="container">
-		<h1> ادخال قراءة عداد مياة</h1>
-		<form action="" method="post">
-			{% csrf_token %}
-			{{ form.as_p }}
-			<div>
-			  <label for="name">اسم مقدم الطلب:</label>
-			  <input type="text" id="name" name="name" required>
-			</div>
-			<div>
-			  <label for="id">رقم البطاقة:</label>
-			  <input type="text" id="id" name="id" required>
-			</div>
-			<div>
-			  <label for="last-reading">اخر قراءة للعداد:</label>
-			  <input type="text" id="last-reading" name="last-reading" required>
-			</div>
-			<div>
-			  <label for="date">تسجيل تاريخ اخر قراءة للعداد :</label>
-			  <input type="date" id="date" name="date" format="yyyy-mm-dd">
-			</div>
-			<div>
-			  <label for="current-reading">ادخال القراءة الحالية:</label>
-			  <input type="text" id="current-reading" name="current-reading" required>
-			</div>
-			<div>
-			  <label for="image">ادخال صورة العداد:</label>
-			  <input type="file" id="image" name="image" accept="image/*" required>
-			</div>
-			<div>
-			  <label for="type">نوع المنشأة:</label>
-			  <select id="type" name="type" required>
-				<option value="">-- برجاء تحديد المنشأ--</option>	
-				<option value="منزل">منزل</option>
-				<option value="شركة">شركة</option>
-				<option value="منشأة حكومية">منشأة حكومية</option>
-			  </select>
-			</div>
-			<div>
-			  <button type="submit">تقديم الطلب</button>
-			</div>
-		  </form>
-
-	</div>
-	
-  </body>
-  </html>
+    <div class="container">
+        <h1> ادخال قراءة عداد مياة</h1>
+        <form action="" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            {% if messages %}
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+            <div>
+                <label for="name">اسم مقدم الطلب:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div>
+                <label for="id">رقم البطاقة:</label>
+                <input type="text" id="id" name="national_identity_card_number" required>
+            </div>
+            <div>
+                <label for="last-reading">اخر قراءة للعداد:</label>
+                <input type="text" id="last-reading" name="last_reading" required>
+            </div>
+            <div>
+                <label for="date">تسجيل تاريخ اخر قراءة للعداد :</label>
+                <input type="date" id="date" name="last_reading_date" format="yyyy-mm-dd">
+            </div>
+            <div>
+                <label for="current-reading">ادخال القراءة الحالية:</label>
+                <input type="text" id="current-reading" name="current_reading" required>
+            </div>
+            <div>
+                <label for="image">ادخال صورة العداد:</label>
+                <input type="file" id="image" name="counter_image" accept="image/*" required>
+            </div>
+            <div>
+                <label for="type">نوع المنشأة:</label>
+                <select id="type" name="origin_type" required>
+                    <option value="">-- برجاء تحديد المنشأ--</option>   
+                    <option value="منزل">منزل</option>
+                    <option value="شركة">شركة</option>
+                    <option value="منشأة حكومية">منشأة حكومية</option>
+                </select>
+            </div>
+            <div>
+                <button type="submit">تقديم الطلب</button>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
